@@ -5,6 +5,7 @@ version ? (????-??-??):
   - changed DB driver version format (alec)
   - lmsd: added %i16 variable for IP's last octet heximal representation
     in tc/tc-ng and %i16 and %i16pub in hostfile module (alec) 
+  - mysql driver: server version checking only when connected (alec)
 
 version 1.9.7 Thalan (2007-05-09):
 
